 * Show a hint to project maintainers, when he/she is not a package maintainer of
   the target package of a request
 * Main projects list is now filtered based on a configurable (by the admin) regular expression
 * Users can download the public key and SSL certificate for a project via the project home page
 * import of kiwi build descriptions is supported (obs-service-kiwi_import)

API:
 * Allow admins to lock or delete users and their home projects via new command
 * Users can be declared as sub accounts of other users. Useful for automated scripts.
 * New API route to get public key and SSL certificate: GET /source/:project_name/_keyinfo
 * New feature toggle config file. Use config/feature.yml to enable/disable features in the OBS.

Backend:
 * multibuild: allow to build multiple jobs from one source package without the need
               of creating local links
 * experimental support of snap package format
 * workers are now also tracked when they went away (new states "down", "away" and "dead")
 * worker capabilities can be requested
 * usable workers can be requested with uncommited constraints
 * functionality to remove published packages (osc unpublish)
 * New obsservicedispatch service to handle source service runs in a queue
   and asynchron.
 * preinstall images can be used for local building
 * improved speed of diffing sources
 * Support caching of pulled git sources

Shipment:
 * optional docker container to run source services is provided

Wanted changes:
===============

 * kiwi builds: build configuration changes from the project where the kiwi
                file is stored have always an effect now.

 * maintenance_release requests are locking only the source packages on
   creation now. They don't lock the patchinfos. The project gets locked on release
   now.

 * service wrapper script for LXC got replaced by a docker alternative

Other changes
=============
 * Server side pagination on user show page for improving the performance.
