@@ -27,6 +27,7 @@ UI:
  * Main projects list is now filtered based on a configurable (by the admin) regular expression
  * Users can download the public key and SSL certificate for a project via the project home page
  * import of kiwi build descriptions is supported (obs-service-kiwi_import)
+ * Bugfix: `Make user admin` link was not working on `Manage Users` page
 
 API:
  * Allow admins to lock or delete users and their home projects via new command
